<resources>
    <string name="app_name">StaffManage</string>
    <string name="label_staff_id">Staff ID:</string>
    <string name="input_id">Input ID</string>
    <string name="label_phone">Phone Number:</string>
    <string name="input_phone">Input Phone Number</string>
    <string name="login">LOGIN</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="not_account">Don\'t have an account?</string>
    <string name="forgot_password">FORGOT \n PASSWORD</string>
    <string name="btn_send">SEND</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="product_manager">Quản lý sản phẩm</string>
    <string name="intro">Giới thiệu</string>
    <string name="tt_setting">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="my_name">Vũ Nguyễn</string>
    <string name="mail">vunguyen.and102@android.com</string>
    <string name="name_food1">Bánh quy bơ LU Pháp</string>
    <string name="price">45.000</string>
    <string name="name_price_quantity"> VNĐ - SL: </string>
    <string name="quantity">10</string>

    <string name="edit">Chỉnh sửa</string>
    <string name="delete">Xóa</string>
    <string name="add">THÊM SẢN PHẨM</string>

    <string name="label_name_product">Tên sản phẩm: </string>
    <string name="input_name_product">Input name product</string>

    <string name="label_price">Giá bán: </string>
    <string name="input_price">Input price product</string>

    <string name="label_quantity">Số lượng: </string>
    <string name="input_quantity">Input quantity</string>

    <string name="btn_add">THÊM</string>
    <string name="title_login">STAFF MANAGER \n RESTAURANT</string>

    <string name="channel_name">Thông Báo</string>
    <string name="channel_description">Đây là nội dung thông báo</string>
</resources>