<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ManHinh.ForgotPass">

    <ImageButton
        android:id="@+id/ibtnBack"
        style="?attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_24"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:textSize="40sp"
        android:textAlignment="center" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_staff_id"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edtStaffId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/input_id"
        android:background="@drawable/shape_edt"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_phone"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/input_phone"
        android:background="@drawable/shape_edt"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        app:cornerRadius="10dp"
        app:strokeColor="@color/black"
        android:backgroundTint="@color/blue"
        app:strokeWidth="1dp"
        android:layout_marginTop="30dp"
      />

</LinearLayout>