<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ManHinh.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logofpt"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_rawRes="@raw/loading4"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User name:"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edtUserLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Nhập Username"
        android:background="@drawable/shape_edt"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edtPassLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Nhập pass"
        android:background="@drawable/shape_edt"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>
    
    <Button
        android:id="@+id/btnForgotPass"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        />


</LinearLayout>